--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "example": "ts-node example/index.ts"
   },
   "devDependencies": {
+    "@types/node": "^12.0.12",
+    "dynamic-terminal": "^1.0.5",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   }
